testsuite/tests/gadt/T18191.stderr
T18191.hs:6:21: error: [GHC-71492]
    • GADT constructor type signature cannot contain nested ‘forall’s or contexts
    • In the definition of data constructor ‘MkZ1’

T18191.hs:6:31: error: [GHC-89246]
    • Record syntax is illegal here: {unZ1 :: (a, b)}
    • In the definition of data constructor ‘MkZ1’

T18191.hs:7:19: error: [GHC-71492]
    • GADT constructor type signature cannot contain nested ‘forall’s or contexts
    • In the definition of data constructor ‘MkZ2’

T18191.hs:7:27: error: [GHC-89246]
    • Record syntax is illegal here: {unZ1 :: (a, b)}
    • In the definition of data constructor ‘MkZ2’

